Rearrange elements in recipe card to inline-block
Delete old image and add new with different dimensions
Modify html to decrease the size of heading from h2 to h3
Include the recipe link within the recipe-info section
Modify styles in css to demonstrate inline-block

--- a/style.css
+++ b/style.css
@@ -1,82 +1,79 @@
 /* style.css */
 
-* {
-    line-height: 1.5;
-    padding: 0px;
-    margin: 0px;
+*,
+*:before,
+*:after {
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
 .recipe-card {
-    width: 500px;
-    background-color: bisque;
+    width: max-content;
+    margin: 20px auto;
     border: 5px solid black;
+}
+
+img {
+    width: 150px;
+    height: 250px;
+    display: inline-block;
+    vertical-align: top;
+    
+}
+
+.recipe-content {
+    width: 600px;
+    display: inline-block;
+    vertical-align: top;
     padding: 20px;
-    margin: 5px auto 5px;
-    text-align: center;
-}
-
- img {
-    width: 200px;
-    height: auto;
-    border: 2px solid darkred;
-}
-
-h1 {
-    color: darkred;
+    /* border: 2px solid black; */
 }
 
 ul {
     list-style: none;
 }
 
-
-
-.recipe-card h2, 
-.recipe-card a {
-    text-transform: uppercase;
+h1 {
+    margin-top: 0px;
+    color: darkred;
 }
 
-li h2 {
-    font-size: 16px;
+h1, .description {
+    margin-bottom: 15px;
+}
+
+.recipe-info {
+    /* padding: 5px; */
+    display: inline-block;
+    vertical-align: top;
+    /* border: 2px solid black; */
+    margin-right: 20px;
+}
+
+ul li {
+    display: inline-block;
+    /* border: 2px solid black; */
+    margin-right: 20px;
+    font-size: 18px;
 }
 
 .recipe-card a {
     background-color: #fc9400;
     color: #fff;
     text-decoration: none;
-    border: 2px solid black;
+    padding: 10px 12px;
+    display: inline-block;
+    vertical-align: top;
 }
 
-.recipe-content h1 {
-    text-align: center;
-}
-
-.recipe-content .description, li {
-    padding: 10px;
-    margin: 10px;
-    text-align: justify;
-}
-
-.recipe-info {
-    text-align: left;
-}
-
-a:hover {
+.recipe-card a:hover {
     color: black;
 }
 
-li p, li h2 {
-    display: inline-block;
-}
-
-li h2 {
-    text-align: left;
-    width: 75%;
-}
-
-li p {
-    text-align: right;
-    width: 25%;
+.description {
+    text-align: justify;
 }
